Completed data models for postgres. Added migration file and updated local database with correct tables.

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres": "Host=localhost; Database=mantis; Username=akira; Password=1994"
+    "WebApiDatabase": "Host=localhost; Database=mantis; Username=postgres; Password=mantis2024"
   }
 }
