Added migration file for cloud database (Aiven) and removed old migration file for localhost. Updated database.

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiDatabase": "Host=localhost; Database=mantis; Username=postgres; Password=mantis2024"
+    "WebApiDatabase": "Host=pg-25c993b5-mantis.k.aivencloud.com; Port=13942; Database=defaultdb; Username=avnadmin; Password=AVNS_1prHxMHGaq47AcrU7us"
   }
 }
