Removed previous migration files. Created new migration file for init test database. Performed migration and verified with pgAdmin that tables are now in test db.

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -29,4 +29,8 @@
     <InternalsVisibleTo Include="..\Backend.IntegrationTests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
