Finished error handling for Ajax template. Finished API request handler for login and register. Finished register page; needs testing.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.1",
