--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-router-dom": "^5.3.3",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.4",
     "daisyui": "^4.6.0",
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "validator": "^13.12.0"
