--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,8 @@
     "chart.js": "^4.4.4",
     "daisyui": "^4.6.0",
     "dotenv": "^16.4.5",
+    "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
